<resources>

    <string name="app_name">DDCharacterSheet</string>
    <string name="hello_world">Listen!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="new_character_button">New Character</string>
    <string name="new_folder_button">New Folder</string>
    <string name="dice_roller_nav">Dice</string>
    <string name="spell_lookup_nav">Spells</string>
    <string name="title_activity_character_sheet">CharacterSheetActivity</string>
    <string name="info_nav">Info</string>
    <string name="combat_nav">Combat</string>
    <string name="buffs_nav">Buffs</string>
    <string name="skills_nav">Skills</string>
    <string name="magic_nav">Magic</string>
    <string name="feats_nav">Feats</string>
    <string name="inventory_nav">Inven</string>
    <string name="notes_nav">Notes</string>
    <string name="character_name">Character Name</string>
    <string name="class_and_level">Class and Level</string>
    <string name="experience">Experience</string>
    <string name="character_pic">Character Picture</string>
    <string name="race">Race</string>
    <string name="patron_deity">Patron Deity</string>
    <string name="alignment">Alignment</string>
    <string name="size">Size</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="character_description">Character Description</string>
    <string name="inventory_title">Inventory</string>
    
</resources>