<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/character_name"
        android:title="@string/character_name"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/dice_roller_nav"
        android:title="@string/dice_roller_nav"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/spell_lookup_nav"
        android:title="@string/spell_lookup_nav"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/info_nav"
        android:title="@string/info_nav"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/combat_nav"
        android:title="@string/combat_nav"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/buffs_nav"
        android:title="@string/buffs_nav"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/skills_nav"
        android:title="@string/skills_nav"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/magic_nav"
        android:title="@string/magic_nav"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/feats_nav"
        android:title="@string/feats_nav"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/inventory_nav"
        android:title="@string/inventory_nav"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/notes_nav"
        android:title="@string/notes_nav"
        android:orderInCategory="100"
        android:showAsAction="always" />
</menu>
